# philomena

./: .credo.exs  .dialyzer_ignore.exs  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .iex.exs  .prettierrc.yml  .sobelow-conf  .typos.toml  CONTRIBUTING.md  Dockerfile.app  Dockerfile.web  README.md  Vagrantfile  create_notable_table.sql  docker-compose.yml  insert_notable_tests.sql  mix.exs  package-lock.json  package.json  post-receive
.githooks/: pre-commit
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: elixir.yml  production.yml
assets/: .browserslistrc  .eslintignore  .eslintrc.yml  .prettierrc.yml  .stylelintrc.yml  brunch-config.js  eslint.config.js  fix-jsdom.ts  jest.config.js  package-lock.json  package.json  tsconfig.build.json  tsconfig.json  vite.config.ts  webpack.config.js
assets/css/: application.css
assets/js/: .eslintignore  .eslintrc.yml  app.js  app.ts  autocomplete.js  autocomplete.ts  booru.js  boorujs.js  burger.js  burger.ts  cable.js  captcha.js  captcha.ts  comment.js  duplicate_reports.js  duplicate_reports.ts  ecmascript-compat-test.ts  fingerprint.js  fp.ts  galleries.js  galleries.ts  image_expansion.js  imagesclientside.js  imagesclientside.ts  input-duplicator.js  input-duplicator.ts  interactions.js  markdowntoolbar.js  markdowntoolbar.ts  match_query.js  match_query.ts  mediavalidation.js  misc.js  misc.ts  notifications.js  notifications.ts  pmwarning.js  pmwarning.ts  poll.js  poll.ts  (+29 more)
assets/static/: g.app.script.js  g.app.sw.js  manifest.json  opensearch.xml  robots.txt
assets/test/: fetch-mock.ts  fix-event-listeners.ts  jest-setup.ts  mock-date-now.ts  mock-storage.ts  mock.ts  randomness.ts  vitest-setup.ts
assets/types/: booru-object.d.ts  reset.d.ts  tags.ts  ujs.ts
config/: aggregation.json  avatar.json  config.exs  dev.exs  footer.json  prod.exs  prod.secret.exs  quick_tag_table.json  releases.exs  runtime.exs  tag.json  test.exs
docker/app/: Dockerfile  purge-cache  run-development  run-prod  run-test  safe-rsvg-convert
docker/files/: Dockerfile  run-docker-container.sh
docker/gdpr/: Dockerfile  anonymize_ips.sh  crontab.txt  entry.sh
docker/opensearch/: opensearch.yml
docker/production/: Dockerfile  purge-cache  run-cron  run-cron-daily  run-production  setup-production
docker/web/: Dockerfile  aws-signature.lua  nginx.conf  site.conf
index/: all.mk  comments.mk  filters.mk  galleries.mk  images.mk  posts.mk  reports.mk  tags.mk
lib/: philomena.ex  philomena_web.ex
lib/camo/: image.ex
lib/fast_textile/: lexer.ex  parser.ex
native/furbooru_markdown/: Cargo.toml  README.md
native/furbooru_markdown/src/: lib.rs
native/philomena/: Cargo.toml  README.md  shell.nix
native/philomena/src/: camo.rs  domains.rs  lib.rs  markdown.rs  tests.rs  zip.rs
native/philomena_markdown/: Cargo.toml
native/philomena_markdown/src/: lib.rs
rel/: config.exs  vm.args
scripts/: dev.sh  init.sh  lib.sh  philomena  philomena.sh
test/: test_helper.exs
vagrant/: app_setup.bash  install.bash  philomena-nginx.conf
(+1556 files in other folders)
