[package]
name = "philomena"
version = "0.3.0"
authors = ["Xe <https://github.com/Xe>", "Luna <https://github.com/Meow>", "Liam White <https://github.com/liamwhite>"]
edition = "2021"

[lib]
name = "philomena"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
base64 = "0.21"
comrak = { git = "https://github.com/philomena-dev/comrak", branch = "philomena-0.29.2", default-features = false }
http = "0.2"
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls"] }
once_cell = "1.20"
regex = "1"
ring = "0.16"
rustler = "0.35"
url = "2.3"
zip = { version = "2.2.0", features = ["deflate"], default-features = false }

[profile.release]
opt-level = 3
lto = true
