[package]
name = "philomena"
version = "0.3.0"
authors = ["Xe <https://github.com/Xe>", "Luna <https://github.com/Meow>", "Liam White <https://github.com/liamwhite>"]
edition = "2021"

[lib]
name = "philomena"
path = "src/lib.rs"
crate-type = ["dylib"]

[dependencies]
base64 = "0.22"
comrak = { git = "https://github.com/philomena-dev/comrak", branch = "philomena-0.41.1", default-features = false }
http = "1.3"
jemallocator = { version = "0.5.0", features = ["disable_initial_exec_tls"] }
once_cell = "1.21"
regex = "1"
ring = "0.17"
rustler = "0.37"
url = "2.5"
zip = { version = "5.1.1", features = ["deflate"], default-features = false }

[profile.release]
opt-level = 3
lto = true
